unpackaged/main/default/objects/TargetingQueryStrings__c/TargetingQueryStrings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>TargetingQueryStrings</label>
</CustomObject>