unpackaged/main/default/objects/TargetingQueryStrings__c/fields/Current_Id_Null__c.field-meta.xml
<CustomField>
    <fullName>Current_Id_Null__c</fullName>
    <label>Current Id Null</label>
    <length>255</length>
    <type>Text</type>
</CustomField>