unpackaged/main/default/objects/TargetingQueryStrings__c/fields/CurrId__c.field-meta.xml
<CustomField>
    <fullName>CurrId__c</fullName>
    <label>Current Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>