unpackaged/main/default/objects/TargetingQueryStrings__c/fields/Custom__c.field-meta.xml
<CustomField>
    <fullName>Custom__c</fullName>
    <label>Custom</label>
    <length>255</length>
    <type>Text</type>
</CustomField>