unpackaged/main/default/objects/TargetingQueryStrings__c/fields/Not_Selected__c.field-meta.xml
<CustomField>
    <fullName>Not_Selected__c</fullName>
    <label>Not Selected</label>
    <length>255</length>
    <type>Text</type>
</CustomField>