unpackaged/main/default/objects/TargetingQueryStrings__c/fields/Selected__c.field-meta.xml
<CustomField>
    <fullName>Selected__c</fullName>
    <label>Selected</label>
    <length>255</length>
    <type>Text</type>
</CustomField>